# GABPSX

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CentralForceFields.hpp  CollisionPrecision.hpp  ColoringRandomPolygon.hpp  main.c  main.cpp
